[+] Media preview generator, [*] Cleaned up services, [*] Fixed prisma bug
